--- a/css/style.css
+++ b/css/style.css
@@ -1893,6 +1893,8 @@ body {
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 0.5s ease, transform 0.5s ease;
+  position: relative;
+    z-index: 1;
 }
 
 .animate-on-scroll.visible {
