--- a/css/style.css
+++ b/css/style.css
@@ -1449,7 +1449,7 @@ body {
 .btn {
   display: inline-block;
   padding: 15px 30px;
-  font-size: 1rem;
+  font-size: .7rem;
   font-weight: 600;
   text-decoration: none;
   border-radius: 50px;
