--- a/css/style.css
+++ b/css/style.css
@@ -2072,7 +2072,7 @@ body {
 .hero-image img {
   width: 85%;
   height: 85%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 20px;
   opacity: 0;
   animation: fadeIn 0.6s 1.2s forwards;
