--- a/css/style.css
+++ b/css/style.css
@@ -2478,7 +2478,7 @@ margin-top: 6rem;
       grid-template-columns: 1fr;
   }
 
-  .features-grid {
+  .features-grid1 {
       grid-template-columns: 1fr;
   }
 
