--- a/css/style.css
+++ b/css/style.css
@@ -2445,7 +2445,7 @@ margin-top: 6rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
-  height: 100%;
+  height: 85%;
 }
 
 .image-container {
@@ -2476,8 +2476,9 @@ margin-top: 6rem;
 }
 
 @media (max-width: 768px) {
-  .content-wrapper {
-      grid-template-columns: 1fr;
+  .content-wrapper1 {
+     display: flex;
+     flex-direction: column;
   }
 
   .features-grid1 {
@@ -2491,4 +2492,5 @@ margin-top: 6rem;
   .container {
       padding: 2rem 1rem;
   }
+
 }
