--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ img.responsive {
 }
 
 .index-3 {
+  position: relative;
   z-index: 3;
 }
 
@@ -2002,7 +2003,7 @@ body {
   margin: 0 auto;
   padding: 0 20px;
   position: relative;
-  z-index: 9999;
+ 
 }
 
 /* Hero Section */
