--- a/css/style.css
+++ b/css/style.css
@@ -1251,6 +1251,12 @@ img.responsive {
   border-radius: 15px; 
   background-color: #bbe7e1;
 }
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  min-width: 200px;
+  overflow: hidden;
+}
 
 .gk-contact-form .has-error .form-control {
   border-color: #a94442;
