--- a/css/style.css
+++ b/css/style.css
@@ -2459,6 +2459,8 @@ margin-top: 10rem;
 .image-container img {
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 99;
   object-fit: cover;
 }
 
