--- a/css/style.css
+++ b/css/style.css
@@ -980,6 +980,7 @@ img.responsive {
   -o-border-radius: 12px;
   -ms-border-radius: 12px;
   margin: 0 auto;
+  display: flex;
 }
 
 .app-container {
@@ -1131,6 +1132,10 @@ img.responsive {
   padding-top: 20px;
 }
 
+.gk-input-submit{
+  margin-bottom: .6rem;
+}
+
 .subscribe-form {
   padding-top: 20px;
 }
@@ -1147,6 +1152,9 @@ img.responsive {
 /* =========================== CONTACT US SECTION ============================== */
 .gk-contact-form {
   padding-top: 40px;
+  border: 1px solid black;
+  background-color: #d6ffff;
+  border-radius: .5rem;
 }
 
 .gk-contact-form .form-control {
