--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,7 @@ img.responsive {
   position: relative;
   max-width: 1600px;
   margin: 0 auto;
-  margin-bottom: -295px;
+  /* margin-bottom: -295px; */
 }
 
 .gk-dd-shape:before {
@@ -775,6 +775,7 @@ img.responsive {
   /* margin-top: -130px;
   margin-left: -25px;
   z-index: -1; */
+  margin-top: 1rem;
 }
 
 .features-right-info {
